@startuml

title __PROJEKT_BAZY_DANYCH_MYSQL (1)'s Class Diagram__\n

  namespace Server {
    class Server.HandlerThread {
    }
  }
  

  namespace Server {
    class Server.ServerColections {
    }
  }
  

  namespace Server {
    class Server.ServerMain {
    }
  }
  

  namespace baza {
    class baza.Baza_danych {
    }
  }
  

  namespace klasy {
    class klasy.Dostawa {
    }
  }
  

  namespace klasy {
    class klasy.Dostawca {
    }
  }
  

  namespace klasy {
    class klasy.FakturaFirma {
    }
  }
  

  namespace klasy {
    class klasy.FakturaKlient {
    }
  }
  

  namespace klasy {
    class klasy.Firma {
    }
  }
  

  namespace klasy {
    class klasy.Klient {
    }
  }
  

  namespace klasy {
    class klasy.Koszyk {
    }
  }
  

  namespace klasy {
    class klasy.Lek {
    }
  }
  

  namespace klasy {
    class klasy.Magazyn {
    }
  }
  

  namespace klasy {
    class klasy.Oferta {
    }
  }
  

  namespace klasy {
    class klasy.Pracownik {
    }
  }
  

  namespace klasy {
    class klasy.Surowiec {
    }
  }
  

  namespace klasy {
    class klasy.Zamowienie {
    }
  }
  

  namespace klasy {
    namespace glowne {
      class klasy_glowne.Faktura {
      }
    }
  }
  

  namespace klasy {
    namespace glowne {
      class klasy_glowne.Osoba {
      }
    }
  }
  

  Server.HandlerThread o-- baza.Baza_danych : baza
  Server.HandlerThread o-- Server.ServerColections : serverColections
  klasy.FakturaFirma -up-|> klasy_glowne.Faktura
  klasy.FakturaKlient -up-|> klasy_glowne.Faktura
  klasy.Klient -up-|> klasy_glowne.Osoba
  klasy.Pracownik -up-|> klasy_glowne.Osoba


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
